fixed review spacing

--- a/public/stylesheets/game-page.css
+++ b/public/stylesheets/game-page.css
@@ -17,6 +17,11 @@ h1 {
 
 .title_text {
     font-size: 55px;
+    margin-top: 10px;
+}
+
+.reviews_title {
+    margin-bottom: 4px;
 }
 
 .content {
